--- a/cryptidcombat.html
+++ b/cryptidcombat.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="task-category"><div class="category-header">Project & Character Foundation</div>
                     <div class="task priority-high" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Setup UE5 Project & Version Control (Git)</div></div>
-                    <div class="task priority-high" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Create base Cryptid character class</div></div>
+                    <div class="task priority-high" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Create Cryptid Combat GameFeature Plugin</div></div>
                     <div class="task priority-high" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Implement Health and Damage system</div></div>
                     <div class="task priority-medium" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Implement core stat system (Atk, Def, Spd)</div></div>
                     <div class="task priority-medium" data-dev="hasty"><div class="task-checkbox"></div><div class="task-text">Implement flexible Ability System framework</div></div>
